--- a/css/styles.css
+++ b/css/styles.css
@@ -1,298 +1,367 @@
 :root {
-  /* font styles */
-  --main-family: 'Roboto', sans-serif;
-  --second-family: 'Raleway', sans-serif;
+  /* fonts */
+  --main-font: 'Roboto', sans-serif;
+  --second-font: 'Raleway', sans-serif;
   /* colors */
+  --text-link-act: #2196f3;
+  --text-color-main: #212121;
   --text-color: #757575;
-  --text-title: #212121;
-  --text-secondary: #ffffff;
-  --text-accent: #2196f3;
-  --bleack-fon: #2f303a;
+  --logo-color: #000000;
+  --border: #ececec;
+  --border-work: #eeeeee;
+  --bgcolor-hero: #2f303a;
+  --bgcolor-btn: #188ce8;
+  --text-title: #ffffff;
+  --bgcolor-team: #f5f4fa;
   --icon-color: #afb1b8;
-  --border-color: #F5F4FA;
-
   /* gap */
   --cadr-gap: 30px;
   --card-item: 4;
 }
 
+body {
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
 h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
-
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-
-/* body */
-.body {
-  font-family: var(--main-family);
-  font-size: 14px;
-  color: var(--text-title);
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
-
-.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* лого */
-/* =========== HEADER =========== */
-.link {
-  text-decoration: none;
-  color: currentColor;
-}
-
-.list {
-  list-style: none;
-}
-
-.header-list {
-  display: flex;
-  list-style: none;
-  column-gap: 50px;
-}
-
-.header-contacts {
-  display: flex;
-  margin-left: auto;
-  list-style: none;
-  gap: 50px;
-}
-
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-/* .contakt-link: :nth-last-child() {
-  margin-right: 50px;
-} */
-
-.logo {
-  margin-right: 93px;
-}
-
-.logo {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--text-accent);
-  letter-spacing: 0.03em;
-}
-
-.logo-header {
-  color: #000;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.header {
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.header {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  border-bottom: 1px solid #ececec;
-  color: var(--text-color);
-}
-
-.contacts-icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-.contact-item {
-  display: flex;
-  align-items: center;
-  }
-/* студія , контакти , портфоліо */
-
-.nav {
-  color: var(--text-title);
-  display: flex;
-  align-items: center;
-}
-
-.nav-link.active {
-  color: var(--text-accent);
-}
-
-.active {
-  color: var(--text-link-act);
-}
-
-/* кнопка */
-.filter-btn {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  border: none;
-  text-align: center;
-  padding: 6px 22px;
-  border: 0;
-  color: var(--text-title);
-  background-color: #f5f4fa;
-  border-radius: 4px;
-}
-
-.hero-btn {
-  width: 216px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--text-accent);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  align-items: center;
-  text-align: center;
-  border-radius: 4px;
-  letter-spacing: 0.06em;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  color: #ffffff;
-}
-
 .btn {
   cursor: pointer;
   font-family: inherit;
 }
-
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: #188ce8;
-  color: var(--text-secondary);
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
-
-.card-set {
+.link {
+  text-decoration: none;
+  color: currentColor;
+}
+.list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.logo {
+  font-family: var(--second-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--text-link-act);
+}
+.header .logo {
+  margin-right: 93px;
+}
+.logo-header {
+  color: var(--logo-color);
+}
+.logo-footer {
+  color: var(--text-title);
+}
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+.footer-box {
   display: flex;
-  flex-wrap: wrap;
-  gap: var(--cadr-gap);
+  gap: 70px;
+  align-items: baseline;
 }
-
-.team-card {
-  background-color: var(--text-secondary);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+.footer .social-link {
+  background-color: rgba(255, 255, 255, 0.1);
 }
-
-.team-foto {
-  margin-bottom: 30px;
+.footer-icon {
+  fill: var(--text-title);
 }
-
-.about-list {
-  --card-item: 3;
+.address {
+  font-style: inherit;
+  color: rgba(255, 255, 255, 0.6);
 }
-
-.portfolio-filter {
+.footer-title {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--text-title);
+  margin-bottom: 20px;
+}
+.address-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-  gap: 8px;
+  flex-direction: column;
+  gap: 9px;
+}
+.address-link[target='_blank'] {
+  color: var(--text-title);
+}
+.header {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  border-bottom: 1px solid var(--border);
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-list {
+  display: flex;
+  margin-right: auto;
+  gap: 50px;
 }
 
-.contacts-link:hover,
-.contacts-link:focus,
-.nav-link:hover,
-.nav-link:focus,
-.address-link:focus,
-.address-link:hover,
-.contakt-link:focus,
-.contakt-link:hover {
-  color: var(--text-accent);
+.header-contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 30px;
 }
+.nav-link,
 .contacts-link {
   display: flex;
   align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.contact-item {
+  display: flex;
+  align-items: center;
+}
+.contacts-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+.nav {
+  display: flex;
+  color: var(--text-color-main);
+}
+.active {
+  color: var(--text-link-act);
 }
 
 .hero {
   padding-top: 200px;
-  padding-bottom: 210px;
+  padding-bottom: 200px;
   max-width: 1600px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
-  background: var(--bleack-fon);
-  background-image:linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero.jpg);
-  background-size: cover;
+  background-color: var(--bgcolor-hero);
 }
-
-/* заголовок н1 */
-
 .hero-title {
   max-width: 696px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
   font-weight: 900;
+  font-size: 44px;
   line-height: 1.36;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  font-size: 44px;
-  text-align: center;
-  color: var(--text-secondary);
-}
-
-/* заголовок н3 */
-.description-item {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
   color: var(--text-title);
 }
-
-/* .description {
+.hero-btn {
+  min-width: 200px;
+  min-height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--text-link-act);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--text-title);
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.card-set {
   display: flex;
-} */
+  flex-wrap: wrap;
+  gap: var(--cadr-gap);
+  /* flex-basis: calc((100% - (var(--card-item) - 1) * var(--cadr-gap) / var(--card-item)); */
+}
+.card-item {
+  /* max-width: 270px; */
+  flex-basis: calc((100% - (var(--card-item) - 1) * var(--cadr-gap)) / var(--card-item));
+}
 .description-list {
   display: flex;
   gap: 30px;
 }
-
-.description-item {
+.description-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  margin-bottom: 30px;
+  background-color: var(--bgcolor-team);
+  border-radius: 4px;
+}
+.about {
+  padding-top: 0;
+}
+.about-list {
+  --card-item: 3;
+}
+.team-card {
+  background-color: var(--text-title);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team {
+  background-color: var(--bgcolor-team);
+}
+.card-set .team-card {
+  padding-bottom: 30px;
+}
+.team-prof,
+.team-name {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+.team-foto {
+  margin-bottom: 30px;
+}
+.team-name {
+  font-weight: 500;
   margin-bottom: 10px;
+  color: var(--text-color-main);
+}
+.team .social {
+  margin-top: 16px;
+}
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--text-title);
+  border-radius: 50%;
+  fill: var(--icon-color);
+  /* outline: 1px solid red; */
 }
 
-/* .description-text {
-  max-width: 270px;
+.team-icon:hover,
+.team-icon:focus,
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--text-link-act);
+  fill: var(--text-title);
+}
+.client-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 170px; */
+  height: 92px;
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  color: var(--icon-color);
+}
+.client-link:hover,
+.client-link:focus {
+  color: var(--text-link-act);
+}
+.client-icon {
+  fill: currentColor;
+}
+/* .client-icon:hover,
+.client-icon:focus {
+  fill: var(--text-link-act);
 } */
-/* заголовок н2 */
-.text-none {
+.footer .logo {
+  display: block;
+  margin-bottom: 20px;
+}
+.filter-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  padding: 6px 22px;
+  border: 0;
+  color: var(--text-color-main);
+  background-color: var(--bgcolor-team);
+  border-radius: 4px;
+}
+.current {
+  color: var(--text-title);
+  background-color: var(--text-link-act);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-list {
+  --card-item: 3;
+}
+.client-list {
+  --card-item: 6;
+}
+.portfolio-link {
+  display: block;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.hero-btn:hover,
+.hero-btn:focus {
+  background-color: var(--bgcolor-btn);
+}
+.description-item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  color: var(--text-color-main);
+}
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  margin-bottom: 50px;
+  text-align: center;
+  color: var(--text-color-main);
+}
+.visually-hidden {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -304,212 +373,45 @@ img {
   clip-path: inset(50%);
   margin: -1px;
 }
-
-/* колір секції*/
-.about {
-  padding-top: 0;
-}
-
-.section-titel {
-  font-weight: 700;
-  font-size: 36px;
+.portfolio-filter {
+  display: flex;
+  justify-content: center;
   margin-bottom: 50px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--text-title);
+  gap: 8px;
 }
-
-.team {
-  background: var(--border-color);
-}
-/* контейнір з картинками  */
-
-.description-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 270px;
-  height: 120px;
-  margin-bottom: 30px;
-  background-color: var(--border-color);
-  border-radius: 4px;
-}
-
-
-
-/* співробітники */
-
-.team-name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  margin-bottom: 10px;
-  text-align: center;
-  color: var(--text-title);
-}
-.social-list-icon {
-  width: 20px;
-  height: 20px;
-  fill:#AFB1B8;;
-}
-.social-list {
-  display: flex;
-  justify-content: center;
-  column-gap: 10px;
-}
-.social-list-link,
-.footer-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin-bottom: 30px; */
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color:var(--text-secondary);
-
-}
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color:var(--text-accent);
-}
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-  fill: var(--text-secondary);
-}
-
-
-/* професія */
-
-.team-prof {
-  line-height: 1.18;
-  text-align: center;
-  font-size: 16px;
-  margin-bottom: 16px;
-}
-/*--нова секція постійні клієнти */
-
-.card-set .team-card {
-padding-bottom: 30px;
-}
-
-.client-list {
-  --card-item: 6;
-}
-
-.client-icon {
-  fill:currentColor;
-}
-
-.card-item {
-  flex-basis: calc((100% - (var(--card-item) - 1) * var(--cadr-gap)) / var(--card-item));
-}
-
-.client-link {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-  height: 92px;
-  border: 1px solid currentColor;
-  border-radius: 4px;
-  justify-content: center;
-  color: var(--icon-color)
-}
-
-.client-link:hover,
-.client-link:focus {
-  color: var(--text-accent);
-}
-
-
-/* підвал сторінки */
-.footer {
-  background: var(--bleack-fon);
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.footer .logo {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.link-logo {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.19;
-  color: var(--text-accent);
-}
-
-.logo-footer {
-  color: var(--text-secondary);
-}
-
-.address-link {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.address-list {
-  display: flex;
-  flex-direction: column;
-  gap: 9px;
-}
-
-.address {
-  font-style: inherit;
-}
-
-.address-map {
-  color: var(--text-secondary);
-}
-
-
-.footer-icon {
-fill: var(--text-secondary);
-}
-.footer-contact .social-list-link
- {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-/* Друга сторінка */
-
-/* кнопки */
-.filter-btn:hover,
-.filter-btn:focus {
-  background: var(--text-accent);
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.portfolio-item:hover,
-.portfolio-item:focus {
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-
-/*портфоліо*/
-.portfolio-list {
-  --card-item: 3;
-}
-
-.portfolio-block {
-  padding: 20px 24px;
-  background-color: var(--text-secondary);
-  border: 1px solid #eeeeee;
-}
-
 .portfolio-title {
-  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
   margin-bottom: 4px;
-  color: var(--text-title);
+  color: var(--text-color-main);
 }
-
 .portfolio-text {
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.88;
+}
+.portfolio-block {
+  border: 1px solid var(--border-work);
+  padding: 20px 24px;
+}
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.address-link:hover,
+.address-link:focus,
+.contacts-footer:hover,
+.contacts-footer:focus {
+  color: var(--text-link-act);
+  fill: var(--text-link-act);
+}
+.current:hover,
+.current:focus,
+.filter-btn:hover,
+.filter-btn:focus {
+  color: #ffffff;
+  background-color: var(--text-link-act);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
